# realtime_db_updates

./: README.md  main.py  pyproject.toml
backend/: database.py  main.py  models.py  websocket_manager.py
database/: docker-compose.yml  schema.sql
